--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <h1 class='masthead-heading'>Axel Nussbaumer</h1>
     </header>
     <section class="details">
-      <h1>Introduction</h1>
-      <p>Details here...</p>
+      <h1>About Me</h1>
+      <p>Aspiring CodeMonkey</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Da Moon.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Dinosaur</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Racecar Driver</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>A house</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>So I can git gud</p>
     </section>
 
     <footer id="footer">
